manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: geekscat/anem-per-feina:latest
        command: ["invoke"]
        args: [
          "wait-for",
          "db:5432",
          "migrate",
          "runserver",
          "--debug",
        ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - name: http
    targetPort: 5432
    port: 5432
  selector:
    app: db
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  # tls:
  #   - hosts:
  #     - nemperfeina.cat
  #     secretName: nemperfeina-cat-crt
  rules:
  - host: nemperfeina.cat
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 80
